# 3YP_Tracy

./: .gitignore  3YP Parameters.xlsx  ARCHITECTURE.md  FIX_IMPORTS_GUIDE.md  FS-Rules_2025_v1.0.txt  LOGBOOK.md  MODEL_ACCURACY_NOTES.md  PRESENTATION_PROMPT.md  README.md  RIGOROUS_SOLUTION.md  RIGOROUS_SOLUTION_COMPLETE.md  RUN_OPTIMIZATION.md  ReportWriting2026.pptx  SYSTEM_ARCHITECTURE.md  __init__.py  _ensure_imports.py  _imports.py  _package_init.py  build_logbook.py  export_diagrams_for_presentation.py  export_to_diagram_tools.py  extract_mermaid_for_live_editor.py  footmisc.sty  generate_logbook_figures.py  import_helper.py  main.m  open_diagram.sh  optimization_report.json  optimize.sh  presentation_slides.md  pyproject.toml  requirements.txt  run_grid_search.py  run_optimization.py  run_optimization_improved.py  run_optimization_rigorous.py  run_quick_optimization.py  setup.py  test_optimization.py
Tyre_Data/: FSAE Spring Rate Data_0.xls  FSAE Stab Rig Data.xls  Tyre Data - P96 model_0.doc
Yuze Jiang/: EEM.tex  main.tex
analysis/: __init__.py  results.py  sensitivity.py  validation.py  visualization.py
config/: __init__.py  config_loader.py  motor_presets.py  vehicle_config.py
docs/: ACCELERATION_COMPARISON_REFERENCES.md  ACCELERATION_PHASES.md  API.md  FUNCTION_MAPPING.md  HOW_THE_SYSTEM_WORKS.md  MEGA_DIAGRAM.md  MEGA_DIAGRAM_CLEAN.md  MEGA_DIAGRAM_FIXED.md  MEGA_DIAGRAM_HTML.html  MEGA_DIAGRAM_TEXT.md  MERMAID_SETUP_COMPLETE.md  MERMAID_TEST.md  MODEL_PARAMETERS.md  OPTIMIZATION_CONFIRMATION.md  OPTIMIZATION_GUIDE.md  OVERVIEW_SLIDE_SCRIPT.md  (+8 more)
(+255 files in other folders)
